- Post edit text now has the correct color.

+

- Added a add post image icon button which later will link to the new page for that specific secondary subject.
- CSS changes which were needed for contentView
- Fixed collapse not being rotated anymore.

+

- Fixed a bug where delete wasn't working inside the edit function for a post.
- Moved the starting of a php session to the controller, allowing the removal if this on other locations and no chance for a duplicate opening of sessions (encoutered warnings)
- Create post now fully functional.
- All new post buttons now have the right controller call
- Fixed a bug which allowed a user to still edit a posts when logging out while in the edit view.
- Fixed a bug where the post view was not shown when when a user logged out while editing.
- Removed left over logDebug calls.

+

- First letter of a post title will now automatically be capitalized.
- Validation to check if the content is not empty when editing a post
- Validation to check if the content is not empty when creating a new post
- Validation to check if the title is not empty when creating a new post

+

- Html tags are now escaped when posts are made or edited, preventing html/script injections.
- Started working on the subject proposal page

+ 

- getPrimarySubjects and getSecondarySubjects moved to the model instead of specific models since there used more then once.
- Proposalpage layout now finished.
- Proposal data will now be send to model when clicking the propose button.

+ 

- Removed isPostDataEmtpy and isPostFormDataEmpty functions since their use was not needed/used properely
- Replaced isPostFormDataEmpty with isLoginDataSet, which is used for both the register and login models.
- Made a function inside the model.php for stopping the code and exiting with a alert. dieWithAlert()
- Replaced individual die and alert with the function dieWithAlert()
- Proposal page now done (not including admin functionality)

+
